# FastAPIFBSSO

./: README.md  main.py  pyproject.toml
templates/: facebook-login.html
