[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["theKwabena <abbeyemmanueltetteh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.21"
fastapi-sso = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

